--- a/todo-api.cabal
+++ b/todo-api.cabal
@@ -37,6 +37,7 @@ library
   build-depends:
       aeson
     , base >=4.7 && <5
+    , persistent
     , servant
     , servant-server
     , warp
@@ -54,6 +55,7 @@ executable todo-api-exe
   build-depends:
       aeson
     , base >=4.7 && <5
+    , persistent
     , servant
     , servant-server
     , todo-api
@@ -73,6 +75,7 @@ test-suite todo-api-test
   build-depends:
       aeson
     , base >=4.7 && <5
+    , persistent
     , servant
     , servant-server
     , todo-api
